--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@ body{
 
 .header {
     background-image: url(./images/bg.png);
-    height: 100vh;
+    Width:1440px;
+    Height:800px;
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -84,10 +85,216 @@ body{
     text-decoration: none;
     font-weight: 700;
     font-size: 14px;
-    color: white;
+    color: white; 
+    transition: background-color 0.3s linear;
+}
+
+.button:hover {
+    background-color: rgb(105, 75, 20);
+}
+
+
+.btn {
     
+}
+
+.header-down {
+    position: relative;
 
 }
-.btn {
+
+.header-title {
+    color: #D67E35;
+    font-size: 50px;
+    font-weight: 400;
+    font-family: 'Tinos', serif;
+    text-align: center;
+    position: absolute;
+    left: 0px;
+    margin-top: 222px;
+    margin-bottom: 12px;
+    
+}
+.header-subtitle {
+    color: #D67E35;
+    font-size: 80px;
+    font-weight: 400;
+    font-family: 'Tinos', serif;
+}
+
+.header-suptitle {
+    color: #FFFFFF;
+    font-size: 18px;
+    font-weight: 400;
+    font-family: 'Open Sans', sans-serif;
+    
+}
+.header-suptitle:after {
+    position: absolute;
+    content: '';
+    height: 2px;
+    width: 61px;
+    background-color: #FFFFFF;
+    top: 160px;
+    left: 75px;
+}
+
+.header-suptitle::before {
+    position: absolute;
+    content: '';
+    height: 2px;
+    width: 61px;
+    background-color: #FFFFFF;
+    top: 160px;
+    left: 339px;
+}
+
+.header-button {
+    background: #FF7400;
+    text-decoration: none;
+    color: #FFFFFF;
+    font-weight: 700;
+    font-size: 14px;
+    font-style: bold;  
+    padding: 14px 28px 14px 28px;
+    font-family: 'Open Sans', sans-serif;
+    transition: background-color 0.3s linear; 
+}
+
+.header-button:hover {
+    background: #64340d;
+
+}
+
+.card {
+    box-shadow: 10px 10px 40px 20px #0000001A;
+    width: 349px;
+    height: 328px;
+    margin-right: 31px;
+    background-color: #FFFFFF;
+    margin-top: -87px;
+    padding: 0px 10px;
+    
+    
+}
+
+.cards-holder {
+    display: flex;
+    justify-content: center;
+}
+
+.card-images {
+    display: flex;
+    justify-content: center;
+    padding-top: 31px;
+}
+
+.card-title {
+    display: flex;
+    justify-content: center;
+    font-family: 'Tinos', serif;
+    font-weight: 400;
+    font-size: 26px;
+    margin-bottom: 20px;
+    
+}
+.card-title span {
+    color: #BC9060;
+}
+
+.card-desc {
+    text-align: center;
+    justify-content: center;
+    font-family: 'Tinos', serif;
+    font-weight: 400;
+    font-size: 26px;
+    color: #656363;
+}
+
+.history {
+    margin-top: 166px;
+}
+
+.history-title {
+    font-size: 54px;
+    font-weight: 400;
+    font-family: 'Tinos', serif;
+    width: 444px;
+    text-align: center;
+    margin-bottom: 21px;
+}
+
+.history-title span {
+    color: #D67E34;
+}
+
+.history-desc {
+    font-size: 16px;
+    color: #656363;
+    width: 444px;
+    text-align: center;
+    left: 166px;
+    
+}
+
+.history-number {
+    display: flex;
+    font-size: 40px;
+    font-weight: 400;
+    width: 444px;
+    justify-content: center;
+    margin-top: 40px;
+    margin-left: 30px;
+
+}
+
+.number-item {
+    margin-right: 60px;
+    text-align: center;
+    font-style: 40px;
+    color: #BC9060; 
+}
+
+.number-item span {
+    display: block;
+    color: #000;
+    font-size: 20px;
+    font-weight: 400;
+}
+
+.history-images {
+    position: relative;
+}
+
+.imageges-2 {
+    position: absolute;
+    z-index: 3;
+    top: 12px;
+    left: 69px;
+}
+
+.imageges-1 {
+    position: absolute;
+    z-index: 2;
+    top: 168px;
+    left: 336px;
+}
+
+.imageges-3 {
+    position: absolute;
+    z-index: 1;
+    top: -20px;
+    left: 243px;
+}
+
+.imageges-4 {
+    position: absolute;
+    z-index: 0;
+    top: 12px;
+    left: 328px;
+}
+
+.history-holder {
+    display: flex;
     
 }
